--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,2 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+roma:
+  name: roma
+  email: roma@gmail.com
+  password_digest: <%= User.digest('password') %>
 
