--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,8 +3,16 @@ roma:
   name: roma
   email: roma11@gmail.com
   password_digest: <%= User.digest('password') %>
+
 inna:
   name: Inna
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user#{n}@gmail.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
 
