add admin rights - allow admin delete users

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,7 @@ roma:
   name: roma
   email: roma11@gmail.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 inna:
   name: Inna
