add activation_account controller, add columns to users and fill users.activation_digest automatically when create user

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,16 +4,22 @@ roma:
   email: roma11@gmail.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 inna:
   name: Inna
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user#{n}@gmail.com" %>
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 <% end %>
 
