--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,6 +14,12 @@ inna:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+not_activated:
+  name: Vanya
+  email: vanya@fixture.com
+  password_digest: <%= User.digest('password') %>
+  activated_at: <%= Time.zone.now %>
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
