--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,6 +14,13 @@ inna:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+sergiy:
+  name: sergiy
+  email: sergiy@example.gov
+  password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+
 not_activated:
   name: Vanya
   email: vanya@fixture.com
